[project]
name = "transit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "folium>=0.18.0",
    "onebusaway>=1.2.3",
    "pydantic-settings>=2.6.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.2",
]
